# r5r-launcher

./: .gitignore  README.md  index.html  manifest.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: bumpVersion.cjs  tauri-with-checksum.mjs  write-launcher-sha256.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  download.rs  launch_args.rs  launcher.rs  lib.rs  main.rs  manifest.rs  migration.rs  models.rs  mods.rs  paths.rs  self_update.rs
src/components/layout/: HeroBackdrop.tsx  TopNav.tsx  WindowControls.tsx
src/components/mods/: ModsView.tsx
src/components/news/: NewsView.tsx
src/components/play/: PlayButton.tsx  PlayView.tsx  PromoCarousel.tsx  UtilityButtons.tsx
src/components/servers/: ServersView.tsx  serverBrowserUtils.ts
src/components/settings/: SettingsView.tsx  creditsPage.tsx  gamePage.tsx  launcherPage.tsx  settingsTypes.ts
src/components/ui/: Controls.tsx
src/components/ui/controls/: Button.tsx  FormControls.tsx  UtilityButton.tsx
src/components/ui/layout/: Group.tsx  Row.tsx  ScreenShell.tsx
src/components/ui/media/: Img.tsx
src/components/ui/overlays/: PopupOverlay.tsx
src/config/: assets.ts
src/hooks/: useLauncherController.ts  useModsData.ts  useNewsFeed.ts  useServerBrowserData.ts  useWindowState.ts
src/lib/: appError.ts  ghostNews.ts  launchSettings.ts  launcherSettings.ts  newsImages.ts  r5rServers.ts  uiSound.ts
src/types/: app.ts
